--- a/frontend/src/app/components/header/header.component.html
+++ b/frontend/src/app/components/header/header.component.html
@@ -4,11 +4,18 @@
       <a class="navbar-brand" href="/">Cinema</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li *ngIf="isAdmin()">
+            <a href="/users">user list</a>
+          </li>
         </ul>
-        <form class="d-flex">
-          <a class="btn btn-dark" href="/login">SignIn</a>
-          <a class="btn btn-dark" href="/registration">SignUp</a>
+        <form class="form-inline my-2 my-lg-0" *ngIf="isLogin() else logoutForm">
+          <a class="btn btn-outline-success my-2 my-sm-0" href="/login">Profile</a>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="logout()">Logout</button>
         </form>
+        <ng-template #logoutForm>
+          <a class="btn btn-outline-success my-2 my-sm-0" href="/login">SignIn</a>
+          <a class="btn btn-outline-success my-2 my-sm-0" href="/registration">SignUp</a>
+        </ng-template>
       </div>
     </div>
   </nav>
