--- a/frontend/src/app/components/user-list/user-list.component.html
+++ b/frontend/src/app/components/user-list/user-list.component.html
@@ -18,9 +18,8 @@
 <nav aria-label="Page navigation example">
   <ul class="pagination">
     <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item" *ngFor="let pageNumber of pageable.totalPages">
+    <li class="page-item">
       <a class="page-link" href="#">
-        {{pageNumber}}
       </a>
     </li>
     <li class="page-item"><a class="page-link" href="#">Next</a></li>
