add new functionality and fixed bugs

--- a/frontend/src/app/components/film-session-details/film-session-details.component.html
+++ b/frontend/src/app/components/film-session-details/film-session-details.component.html
@@ -24,6 +24,22 @@
   </tr>
   </tbody>
 </table>
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <li class="page-item" *ngIf="!hasPrevious">
+      <button class="page-link" type="submit" (click)="loadTickets(currentPage - 1)">
+        << Previous
+      </button>
+    </li>
+    <li class="page-item" *ngIf="!hasNext">
+      <button class="page-link" type="submit" (click)="loadTickets(currentPage + 1)">
+        Next>>
+      </button>
+    </li>
+  </ul>
+</nav>
+
 <div *ngIf="tokenStorage.getToken()">
   <button class="btn btn-primary" type="submit" (click)="reserved()">
     Reserved
