--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -9,6 +9,7 @@
         <ul class="list-group list-group-flush">
           <li class="list-group-item">{{user.firstName}}</li>
           <li class="list-group-item">{{user.lastName}}</li>
+          <li class="list-group-item">{{user.roleName}}</li>
         </ul>
       </div>
     </div>
