--- a/frontend/src/app/components/registration/registration.component.html
+++ b/frontend/src/app/components/registration/registration.component.html
@@ -1,4 +1,4 @@
-<div class="conteiner mt-5 st-5">
+<div class="conteiner mt-5 st-5" align="center">
   <div class="row justify-content-center">
     <form (ngSubmit)="save()">
 
