--- a/frontend/src/app/components/user-cinema-list/user-cinema-list.component.html
+++ b/frontend/src/app/components/user-cinema-list/user-cinema-list.component.html
@@ -9,6 +9,7 @@
     <th scope="col">Description</th>
     <th scope="col">Creation date</th>
     <th scope="col">Status</th>
+    <th scope="col">Action</th>
   </tr>
   </thead>
   <tbody>
@@ -21,6 +22,11 @@
     <td>{{cinema.description}}</td>
     <td>{{cinema.creationDate}}</td>
     <td>{{cinema.status}}</td>
+    <td>
+      <a class="btn" href="/owner/cinemas/update">Update cinema</a>
+      <a class="btn" href="/owner/cinemas/update">Change cinema status</a>
+      <a class="btn" href="/owner/{{cinema.id}}/create/manager">add new manager</a>
+    </td>
   </tr>
   </tbody>
 </table>
