--- a/frontend/src/app/components/film-list/film-list.component.html
+++ b/frontend/src/app/components/film-list/film-list.component.html
@@ -16,7 +16,7 @@
 <table class="table table-striped table-hover">
   <thead>
   <tr>
-    <th scope="col">Film name</th>
+    <th scope="col" (click)="sort('filmName')">Film name</th>
     <th scope="col">Director</th>
     <th scope="col">Country</th>
     <th scope="col">Year</th>
@@ -43,12 +43,12 @@
 <nav aria-label="Page navigation example" *ngIf="filmName !== null">
   <ul class="pagination">
     <li class="page-item" *ngIf="!hasPrevious">
-      <button class="page-link" type="submit" (click)="loadAllFilms(currentPage - 1)">
+      <button class="page-link" type="submit" (click)="changePage(currentPage - 1)">
         << Previous
       </button>
     </li>
     <li class="page-item" *ngIf="!hasNext">
-      <button class="page-link" type="submit" (click)="loadAllFilms(currentPage + 1)">
+      <button class="page-link" type="submit" (click)="changePage(currentPage + 1)">
         Next>>
       </button>
     </li>
