added update cinema component

--- a/frontend/src/app/components/admin/user-cinema-list/user-cinema-list.component.html
+++ b/frontend/src/app/components/admin/user-cinema-list/user-cinema-list.component.html
@@ -23,8 +23,7 @@
     <td>{{cinema.creationDate}}</td>
     <td>{{cinema.status}}</td>
     <td>
-      <a class="btn" href="/owner/cinemas/update">Update cinema</a>
-      <a class="btn" href="/owner/cinemas/update">Change cinema status</a>
+      <a class="btn" href="/owner/cinema/{{cinema.cinemaName}}/update">Update cinema</a>
       <a class="btn" href="/owner/cinema/{{cinema.id}}/create/manager">add new manager</a>
       <a class="btn" href="/owner/cinema/{{cinema.id}}/create/hall">add new hall</a>
     </td>
