--- a/frontend/src/app/components/update-cinema/update-cinema.component.html
+++ b/frontend/src/app/components/update-cinema/update-cinema.component.html
@@ -1,1 +1,51 @@
-<p>update-cinema works!</p>
+<div class="container mt-5 st-5" align="center">
+  <div class="row justify-content-center">
+    <div class="row">
+      <form (ngSubmit)="updateCinema()">
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="CinemaName">Cinema name</label>
+            <input type="text" class="form-control" id="CinemaName" name="cinemaName" [(ngModel)]="cinemaDTO.cinemaName">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="Country">Country</label>
+            <input type="text" class="form-control" id="Country" name="country" [(ngModel)]="cinemaDTO.country">
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="City">City</label>
+            <input type="text" class="form-control" id="City" name="city" [(ngModel)]="cinemaDTO.city">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="Address">Address</label>
+            <input type="text" class="form-control" id="Address" name="address" [(ngModel)]="cinemaDTO.address">
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="Description">Description</label>
+            <input type="text" class="form-control" id="Description" name="description" [(ngModel)]="cinemaDTO.description">
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="Status">Status</label>
+            <select id="Status" class="form-control" name="secretQuestion" [(ngModel)]="cinemaDTO.status">
+              <option *ngFor="let status of statuses" value="{{status}}">{{status}}</option>
+            </select>
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Save</button>
+
+      </form>
+    </div>
+  </div>
+</div>
+
+
