--- a/frontend/src/app/components/admin/user-cinema-list/user-cinema-list.component.html
+++ b/frontend/src/app/components/admin/user-cinema-list/user-cinema-list.component.html
@@ -2,8 +2,8 @@
   <thead>
   <tr>
     <th scope="col">#</th>
-    <th scope="col">Cinema</th>
-    <th scope="col">Country</th>
+    <th scope="col" (click)="sort('cinemaName')">Cinema</th>
+    <th scope="col" (click)="sort('country')">Country</th>
     <th scope="col">City</th>
     <th scope="col">Address</th>
     <th scope="col">Description</th>
@@ -32,3 +32,17 @@
   </tr>
   </tbody>
 </table>
+<nav aria-label="Page navigation example">
+  <ul class="pagination">
+    <li class="page-item" *ngIf="!hasPrevious">
+      <button class="page-link" type="submit" (click)="changePage(currentPage - 1)">
+        << Previous
+      </button>
+    </li>
+    <li class="page-item" *ngIf="!hasNext">
+      <button class="page-link" type="submit" (click)="changePage(currentPage + 1)">
+        Next >>
+      </button>
+    </li>
+  </ul>
+</nav>
