--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,18 +1,42 @@
+<div class="container mt-5 st-5" align="center">
+  <div class="row justify-content-center">
+    <div class="col8">
+      <form (ngSubmit)="login()" class="row g-3 needs-validation" novalidate>
 
-<form (ngSubmit)="login()">
+        <div *ngIf="isAuthorizeError" class="form-row">
+          <div class="form-group col-md-6">
+            <div class="alert alert-dark" role="alert">
+              Invalid email or password
+            </div>
+          </div>
+        </div>
 
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="Email">Email</label>
-      <input type="text" class="form-control" id="Email" name="username" [(ngModel)]="loginDTO.email">
-    </div>
+        <div class="form-row">
 
-    <div class="form-group col-md-6">
-      <label for="Password">Password</label>
-      <input type="password" class="form-control" id="Password" name="password" [(ngModel)]="loginDTO.password">
+          <div class="col-md-6">
+            <label for="Email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="Email" name="email" [(ngModel)]="loginDTO.email" required>
+            <div class="valid-feedback">
+              Email cannot been empty!
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <label for="Password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="Password" name="password" [(ngModel)]="loginDTO.password" required>
+            <div class="valid-feedback">
+              Password cannot been empty!
+            </div>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+
+      </form>
     </div>
   </div>
-
-  <button type="submit" class="btn btn-primary">Submit</button>
-
-</form>
+</div>
