rewritten creat film session page; added new functionality for films; code review and bug fix;

--- a/frontend/src/app/components/cinema-details/cinema-details.component.html
+++ b/frontend/src/app/components/cinema-details/cinema-details.component.html
@@ -25,7 +25,7 @@
     <td>{{hall.numberSeatsPerRow}}</td>
     <td>{{cinema.status}}</td>
     <td scope="col" *ngIf="isManager()">
-      <a href="/film-session/create" class="btn btn-secondary">add film session</a>
+      <a href="/manager/hall/{{hall.id}}/film-session/create" class="btn btn-secondary">add film session</a>
     </td>
     <td scope="col" *ngIf="isOwner()">
       <a href="/owner/cinema/{{cinemaName}}/hall/{{hall.hallName}}/update">update hall</a>
