add film statistics: count of reserved tickets;

--- a/frontend/src/app/components/home-page/home-page.component.html
+++ b/frontend/src/app/components/home-page/home-page.component.html
@@ -55,6 +55,11 @@
             Create film
           </a>
         </li>
+        <li class="list-group-item">
+          <a href="/owner/films/statistics" class="list-group-item list-group-item-action active" aria-current="true">
+            Count of reserved tickets
+          </a>
+        </li>
       </ul>
     </div>
 
