added new functionality, code review and bug fixed

--- a/frontend/src/app/components/cinema-details/cinema-details.component.html
+++ b/frontend/src/app/components/cinema-details/cinema-details.component.html
@@ -23,7 +23,7 @@
     <td>{{hall.floor}}</td>
     <th>{{hall.rowsNumbers}}</th>
     <td>{{hall.numberSeatsPerRow}}</td>
-    <td>{{cinema.status}}</td>
+    <td>{{hall.status}}</td>
     <td scope="col" *ngIf="isManager()">
       <a href="/manager/hall/{{hall.id}}/film-session/create" class="btn btn-secondary">add film session</a>
     </td>
