--- a/frontend/src/app/components/manager/create-film-session/create-film-session.component.html
+++ b/frontend/src/app/components/manager/create-film-session/create-film-session.component.html
@@ -1,7 +1,17 @@
 <div class="container mt-5 st-5" align="center">
   <div class="row justify-content-center">
     <div class="row">
+
       <form (ngSubmit)="createFilmSession()">
+
+        <div *ngIf="errorResponse" class="form-row">
+          <div class="form-group col-md-6">
+            <div class="alert alert-danger" role="alert">
+              {{errorResponse.exceptionMessage}}
+            </div>
+          </div>
+        </div>
+
         <div class="form-row">
 
           <div class="form-group col-md-6">
@@ -11,12 +21,6 @@
                 {{film.filmName}}
               </option>
             </select>
-          </div>
-
-          <div class="form-group col-md-6">
-            <label for="FilmName">Film name</label>
-            <input type="text" class="form-control" id="FilmName" name="filmName"
-                   [(ngModel)]="filmSessionDTO.filmName">
           </div>
 
           <div class="form-group col-md-6">
