added ability to resize page size in pages which contains tables with pagination; bugs fix and code review;

--- a/frontend/src/app/components/admin/user-cinema-list/user-cinema-list.component.html
+++ b/frontend/src/app/components/admin/user-cinema-list/user-cinema-list.component.html
@@ -34,6 +34,11 @@
 </table>
 <nav aria-label="Page navigation example">
   <ul class="pagination">
+    <li class="page-item">
+      <select class="form-control" name="statusName" [(ngModel)]="currentSize" (click)="changeSize()">
+        <option *ngFor="let size of sizes" value="{{size}}">{{size}}</option>
+      </select>
+    </li>
     <li class="page-item" *ngIf="!hasPrevious">
       <button class="page-link" type="submit" (click)="changePage(currentPage - 1)">
         << Previous
