--- a/frontend/src/app/components/admin/user-list/user-list.component.html
+++ b/frontend/src/app/components/admin/user-list/user-list.component.html
@@ -8,8 +8,8 @@
 </tr>
 </thead>
 <tbody>
-<tr *ngFor="let user of users">
-  <th scope="row"></th>
+<tr *ngFor="let user of users; let i = index">
+  <th scope="row">{{i + 1}}</th>
   <td scope="row">{{user.email}}</td>
   <td>{{user.roleName}}</td>
   <td>
@@ -61,6 +61,11 @@
 
 <nav aria-label="Page navigation example">
   <ul class="pagination">
+    <li class="page-item">
+      <select class="form-control" name="statusName" [(ngModel)]="currentSize" (click)="changeSize()">
+        <option *ngFor="let size of sizes" value="{{size}}">{{size}}</option>
+      </select>
+    </li>
     <li class="page-item" *ngIf="!hasPrevious">
       <button class="page-link" type="submit" (click)="changePage(currentPage - 1)">
         << Previous
